# genjutsu

./: .gitignore  Cargo.toml  docker-compose.yml  setup-docker.sh
crates/gj-app/: Cargo.toml
crates/gj-app/src/: app.rs  main.rs  state.rs  ui.rs  worker.rs
crates/gj-core/: Cargo.toml
crates/gj-core/src/: bounding_box.rs  camera.rs  error.rs  gaussian_cloud.rs  lib.rs  pipeline.rs  progress.rs  tests.rs
crates/gj-lgm/: Cargo.toml
crates/gj-lgm/src/: lib.rs  model.rs  pipeline.rs  preprocessing.rs  tests.rs  text_to_image.rs
crates/gj-splat/: Cargo.toml
crates/gj-splat/shaders/: gaussian.wgsl
crates/gj-splat/src/: camera.rs  lib.rs  renderer.rs  tests.rs
python/: Dockerfile  docker-compose.yml  environment.yml  gaussiandreamer_service.py  multi_model_service.py  requirements.txt  setup_local.sh  start_dev.sh
python/api/: .dockerignore  Dockerfile  main.py  requirements.txt
python/models/: dreamgaussian.py  gaussiandreamer.py  model.py  shap_e.py
python/redis/: redis.conf
python/shared/: __init__.py  celery_app.py  config.py
python/worker/: .dockerignore  Dockerfile  requirements.txt  tasks.py  worker.py
