[package]
name = "gj-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
gj-core.path = "../gj-core"
gj-lgm.path = "../gj-lgm"
gj-splat.path = "../gj-splat"
burn-ndarray.workspace = true
env_logger.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
image.workspace = true
winit.workspace = true
pollster = "0.4.0"
rfd = "0.15.4"