[package]
name = "gj-splat"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
gj-core.path = "../gj-core"
bytemuck.workspace = true
glam.workspace = true
wgpu.workspace = true
winit.workspace = true